--- a/requirements (2).txt
+++ b/requirements (2).txt
@@ -1,6 +1,6 @@
 streamlit>=1.32.0
-opencv-python>=4.9.0.80
-opencv-contrib-python>=4.9.0.80
+opencv-python-headless>=4.9.0.80
+opencv-contrib-python-headless>=4.9.0.80
 numpy>=1.26.0
 Pillow>=10.2.0
 matplotlib>=3.8.0
